welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:23: error: expected class or object definition
def isFacingTrail(c:Color):Boolean  {
^SlugSnail:43: error: Unmatched closing brace '}' ignored here
}
^