welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
def hunt(c:Color) {  
  
  while (!isFacingTrail(c:Color)){
  	while(!estSurBiscuit()){
     	gauche()
    }
  }
  	while (isFacingTrail(c:Color)){
   		while(!estSurBiscuit()){
    		avance()
     		baisseBrosse()
    		leveBrosse()
       }
    }
  	hunt(c)
  }
  
  prendBiscuit()
}
 // Write your code here
 
def isFacingTrail(c:Color):Boolean  {
    if (!estFaceMur()){
      avance()
      var col:Color = getCouleurSol()
      if (col==c){
        recule()
        return true
      }
      recule()
      return false
    }
      

  	else {
      return false
    }
}// here comes your isFacingTrail method